--- a/contratos.html
+++ b/contratos.html
@@ -15,7 +15,7 @@
 	</header>
 	<h1 class="titu">Big Cloud:Seguridad y privacidad</h1>
 	
-	<img class="flecha" src="img/flecha.png" alt="">
+	<img class="flecha" src="img/flecha.png" alt="" <a href="css/estilos.css"></a>
 	<h1 class="sub">Descripcion de archivos</h1>
 
 <ul class="iconos">
