--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<h2 class="sub">Desde hoy,su nube</h2>
 			<nav class="menu">
 			<ul>
-				<li><a href="#">Planes</a></li>
-				<li><a href="#">Contratar</a></li>
+				<li><a href="css/planes.css">Planes</a></li>
+				<li><a href="css/contratos.css">Contratar</a></li>
 			</nav>
 			</ul>
 </div>
