--- a/contratos.html
+++ b/contratos.html
@@ -4,19 +4,19 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/contratos.css">
 	<title>Contratos</title>
-	<link rel="stylesheet" href="css/contratos.css">
+	
 </head>
 <body>
 	<header>
 		<div class="int">
-		<img src="img/logo-bc.png" alt="">
+		<a href="index.html"><img src="img/logo-bc.png" alt="" width="100px"></a>
 		</div>
 		<h2 class="titulo"></h2>
 	</header>
 	<h1 class="titu">Big Cloud:Seguridad y privacidad</h1>
 	
-	<img class="flecha" src="img/flecha.png" alt="" <a href="css/estilos.css"></a>
-	<h1 class="sub">Descripcion de archivos</h1>
+	<img class="flecha" src="img/flecha.png" alt="">
+	<h1 class="sub">Descripcion de servicios</h1>
 
 <ul class="iconos">
 		<li> <a href=""><img src="img2/facebook.png" alt="" width="50" height="50"></a></li>
@@ -36,7 +36,7 @@
 
 
 
-	<table>
+	<table class="tab">
 		<tr>
 			<td colspan="">Capacidad de almacenamiento</td>
 			<td>1TB</td>
@@ -75,12 +75,12 @@
 		</tr>
 		<tr>
 			<td colspan="">Precio</td>
-			<td>0 €/mes</td>
-			<td>15 €/mes</td>
-			<td>40 €/mes</td>
+			<td><strong class="neg">0 €/mes</strong></td>
+			<td><strong class="neg">15 €/mes</strong></td>
+			<td><strong class="neg">40 €/mes</strong></td>
 		</tr>
 	</table>
-	<input class="boton" type="submit"value="Contrate ahora"/>
+	<a href="planes.html"><input class="boton" type="submit"value="Contrate ahora"/></a>
 	
 </body>
 <footer class="footer">
