--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Big Cloud</title>
 	<link rel="stylesheet" href="css/estilos.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0,maximum-scale=1.0,minimum-sclae=1.0">
 </head>
 <body>
 	<header>
 		<img class="ima" src="img/logo-bc.png" alt="">
 		<div id="#" class="primera">
-			<img src="img/bg-seccion1.png" alt="" >
+			<img class="big" src="img/bg-seccion1.png" alt="" >
 <div class="container">
 	
-		<h1 class="titulo">Big Cloud</h1>
+		<h1 class="tit">Big Cloud</h1>
 			<h2 class="sub">Desde hoy,su nube</h2>
 			<nav class="menu">
 			<ul>
-				<li><a href="css/planes.css">Planes</a></li>
-				<li><a href="css/contratos.css">Contratar</a></li>
+				<li><a href="planes.html">Planes</a></li>
+				<li><a href="contratos.html">Contratar</a></li>
 			</nav>
 			</ul>
 </div>
@@ -33,22 +34,22 @@
 	</header>
 	<section>
 		<article>
-			<img src="img/seccion2.png" alt="">
+			<img class="ima2" src="img/seccion2.png" alt="">
 		</article>
 		</section>
 		<section>
 		<article>
 			<ul class="start">
-				<h1>Todos sus archivos a salvo con nosotros</h1
+				<h1>Todos sus archivos a salvo con nosotros</h1>
 				<li>Comience con un Terabyte de forma gratuita</li>
 				<li>Sincronice de manera rapida y fiable todos sus dispositivos</li>
 			</ul>
 		</article>
 	</section>
 	<footer>
-		<h1>Actividad realizada por Diego Yohani Acevedo</h1>
+		<h1 class="foto">Actividad realizada por Diego Yohani Acevedo</h1>
 		<h2 class="foto">Fotografias de portada <a href="https://unsplash.com/">Unsplash</a></h2>
-		<img src="img/creative-commons.png" alt="">
+		<a href="https://creativecommons.org/licenses/by-sa/4.0/"><img class="foto" src="img/creative-commons.png" alt=""></a>
 	</footer>
 </body>
 </html>
