--- a/planes.html
+++ b/planes.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<div class="logo">
-		<img src="img/logo-bc.png" alt="">
+		<a href="index.html"><img src="img/logo-bc.png" alt=""></a>
 		</div>
 	</header>
 
