--- a/contratos.html
+++ b/contratos.html
@@ -86,6 +86,6 @@
 <footer class="footer">
 <h1 class="fooo">Actividades Realizada por Diego Acevedo</h1>
 <h1 class="fooo">Fotografia de la portada <a href="https://unsplash.com/">UNSPLASH</a></h1>
-<img class="foot" src="img/creative-commons.png" alt="">
+ <a href="https://creativecommons.org/licenses/by-sa/4.0/"><img class="foot" src="img/creative-commons.png" alt=""></a>
 		
 </html>
