--- a/planes.html
+++ b/planes.html
@@ -21,7 +21,7 @@
 
 	
 	<div class="container">
-		<h1 class="cent">Contrate su plan en big cloud <strong class="view">Ver planes</strong></h1>
+		<h1 class="cent">Contrate su plan en big cloud <a href="contratos.html"><strong class="view">Ver planes</strong></h1></a>
 		<div class="container">
 		<fieldset class="field">
 			<legend class="titulares">1.Elija su plan</legend>
@@ -86,6 +86,6 @@
 <footer class="footer">
 	<h1 class="fot">Actividad realizada por Diego Yohani Acevedo</h1>
 		<h2 class="fot">Fotografias de portada <a href="https://unsplash.com/">Unsplash</a></h2>
-		<img class="iman" src="img/creative-commons.png" alt="">
+		<a href="https://creativecommons.org/licenses/by-sa/4.0/"><img class="iman" src="img/creative-commons.png" alt=""></a>
 </footer>
 </html>
